--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## Part 1: IPython ##\n",
     "\n",
-    "get a sample waveform from a function generator, sample with arduino, feed it through serial and plot the signal and its dft\n",
+    "~~get a sample waveform from a function generator, sample with arduino, feed it through serial and plot the signal and its dft\n",
     "\n",
     "observe aliasing with arduino plotter\n",
     "\n",
