make other lab dirs

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -27,7 +27,7 @@
    "source": [
     "## Part 1: IPython ##\n",
     "\n",
-    "~~get a sample waveform from a function generator, sample with arduino, feed it through serial and plot the signal and its dft\n",
+    "get a sample waveform from a function generator, sample with arduino, feed it through serial and plot the signal and its dft\n",
     "\n",
     "observe aliasing with arduino plotter\n",
     "\n",
@@ -121,26 +121,17 @@
    },
    "outputs": [],
    "source": [
-    "device = \"COM8\" # com port of Arduino\n",
-    "baud = 115200\n",
-    "ser = serial.Serial(device, baud, timeout=10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "\n",
-    "\n",
-    "raw_data = []\n",
-    "while (len(raw_data) < 2000): # adjust this line to read in more/less data\n",
-    "    data = ser.readline()\n",
-    "    raw_data.append(data)\n",
-    "ser.close()\n",
+    "def read_serial_data(N):\n",
+    "    device = \"COM8\" # com port of Arduino\n",
+    "    baud = 115200\n",
+    "    ser = serial.Serial(device, baud, timeout=10)\n",
+    "    raw_data = []\n",
+    "    while (len(raw_data) < N+5): # adjust this line to read in more/less data\n",
+    "        data = ser.readline()\n",
+    "        raw_data.append(data)\n",
+    "    raw_data = [float(i) for i in raw_data[5:]]\n",
+    "    ser.close()\n",
     "\n"
    ]
   },
