--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -4,27 +4,53 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 1 #\n"
+    "# Lab 1#\n",
+    "## Electrical Test Equipment and Arduino Coding ##"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Objectives: ##\n",
+    "<a id='objectives'></a>\n",
+    "1) Learn how to use an oscilloscope and function generator.<br>\n",
+    "2) Learn to use breadboard to build and test simple circuits like resistive voltage divider, and RLC filter.<br>\n",
+    "3) Learn how to use an Arduino and iPython to acquire signals.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Setup\n",
+    "- We should generally have 2 people per lab station.\n",
+    "- Your team should have the following items on your station: oscilloscope (with one test probe), function generator, power supply, Arduino Uno (with grey serial cable), multi-meter, breadboard, jumperwire kits, pliers, BNC cable and adaptors.\n",
+    "- You can get the electronic parts such as the resistors, capacitors, diodes, etc. from the supply bins near the cable rack.\n",
+    "- Please keep all the lab equipment in lab only.\n",
+    "- Before you leave the lab, make sure the power for all the equipment is switched off."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 2. Test Equipment\n",
+    "\n",
     "## Oscilloscope\n",
     "<a id='oscope'></a>\n",
     "\n",
-    "The oscilloscope is another useful piece of test equipment that can be used to measure signals that change over time. Unlike the multimeter, which only shows the instantaneous voltage value, the oscilloscope shows a graph of a voltage versus time. This is particularly useful for measuring how devices like sensors respond to inputs. Although this instrument may appear complicated, half of the knobs are just to adjust the axes of the voltage plot. \n",
+    "The oscilloscope is a useful piece of test equipment that can be used to measure signals that change over time. Unlike the multimeter, which only shows the instantaneous voltage value, the oscilloscope shows a graph of a voltage versus time. This is particularly useful for measuring how devices like sensors respond to inputs. Although this instrument may appear complicated, half of the knobs exist just to adjust the axes of the voltage plot. \n",
     "<center>\n",
     "<img src=\"http://www-inst.eecs.berkeley.edu/~ee16a/sp15/Labs/imaging/nb_img/scope.jpg\" align=\"center\" style=\"height:200px\" />\n",
     "</center>\n",
     "Below is a brief overview of how to use this oscilloscope:\n",
     "<br/><br/>\n",
     "1. <strong>Obtain a Probe:</strong>\n",
-    "Grab an Oscope probe from the back wall. They are gray and have two connectors at one of the ends: The gray connector is a spring loaded clip (pull back to expose clip), and the other connector is a black alligator clip. Your probe might be missing the gray shell on the spring loaded clip, but that's okay.\n",
+    "Grab an Oscope probe from the back wall. They are grey and have two connectors at one of the ends: The grey connector is a spring loaded clip (pull back to expose clip), and the other connector is a black alligator clip. Your probe might be missing the grey shell on the spring loaded clip, but that's okay.\n",
     "<br/><br/>\n",
-    "2. <strong>Test the Probe!:</strong>\n",
-    "Turn the Oscope on (button in bottom left corner). Connect the probe to one of the 4 input channels. Make sure that the channel is on (indicated by a green light on the channel number). To turn a channel on, simply press the corresponding numbered button. To turn it off, push the button twice. To test the probe, first locate the 3 metal testing tabs to the left of the 1st input channel (pictured below). Connect the black alligator clip of the probe to the middle (horizontal) tab. Connect the spring loaded clip end (or just the probe tip if your probe lacks a shell) to the leftmost tab (vertical). With the probe connected, hit the auto-scale button in the the top right (pictured below). If your output is a square wave (pictured below), then your probe is working. If your output is not a square wave, tell your GSI immediately and get a new probe.\n",
+    "2. <strong>Test the Probe:</strong>\n",
+    "Turn the Oscope on (button in bottom left corner). Connect the probe to one of the 4 input channels. Make sure that the channel is on (indicated by a green light on the channel number). To turn a channel on, simply press the corresponding numbered button. To turn it off, push the button twice. To test the probe, first locate the 3 metal testing tabs to the left of the 1st input channel (pictured below). Connect the black alligator clip of the probe to the middle (horizontal) tab. Connect the spring loaded clip end (or just the probe tip if your probe lacks a shell) to the leftmost tab (vertical). With the probe connected, hit the auto-scale button in the the top right (pictured below). If your output is a square wave (pictured below), then your probe is working. If your output is not a square wave, tell your GSI immediately and get a new probe.<br>\n",
     "<center>\n",
     "<img src=\"http://inst.eecs.berkeley.edu/~ee16a/images/lab0/oscope_test.jpg\" align=\"center\" style=\"height:200px\" />\n",
     "</center>\n",
@@ -108,9 +134,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Arduino ##\n",
+    "<a id = 'oscope_questions'></a>\n",
+    "Take a good look at your oscilloscope and answer the following questions:<br>\n",
+    "<strong>Question 2.1:</strong><br>\n",
+    "What is the bandwidth of this oscilloscope? What does that mean for the signals you will be able to observe with it? What would the sampling rate of the ADC inside the scope have to be in order to achieve this bandwidth?<br>\n",
+    "<strong>Question 2.2:</strong><br>\n",
+    "What is the input impedance of this scope? Why would that matter?<br>\n",
+    "<strong>Question 2.2:</strong><br>\n",
+    "What is (roughly) the largest and smallest voltage that you could observe with this scope (hint: try changing the volts/div knob to see the limits). What is (roughly) the fastest and slowest frequency that you could observe with this scope.<br>\n",
+    "<strong>Question 2.3:</strong><br>\n",
+    "What happens when you set the trigger to a voltage that your sine wave never reaches?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 3. Arduino ##\n",
     "\n",
-    "Here you will learn how to upload code to Arduino. We have given you a .ino file that programs the Arduino to sample at a given sampling rate\n",
+    "Here you will learn how to upload code to Arduino. We have given you a .ino file that programs the Arduino to sample at a given sampling rate.\n",
     "\n",
     "Follow these steps to test the Oscilloscope and Function Generator:\n",
     "<br>\n",
@@ -126,17 +168,7 @@
     "<br>\n",
     "3. Click the arrow button next to the check button to upload your code to your board. The text near the bottom of the IDE should say your code was uploaded successfully.  \n",
     "</strong>\n",
-    "<br><br>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Question 1: ....\n",
-    "\n",
-    "\n",
-    "dasdaskldad;ak;las"
+    "<br>"
    ]
   },
   {
@@ -173,7 +205,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This block of code will take a device connected to a com port and read in data that is sent over the serial line. In this case our device is an Arduino. It then writes the raw data to a text file to be stored and read later"
+    "This block of code will take a device connected to a com port and read in data that is sent over the serial line. In this case our device is an Arduino. It then writes the raw data to a text file to be stored and read later."
    ]
   },
   {
@@ -234,11 +266,17 @@
     "plt.figure()\n",
     "plt.plot(signal[:500])"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
