currently polishing lab2, raw ports of 3 and 4

--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -314,7 +314,8 @@
     "** Question 5.3 ** Find the cut-off frequency of your real circuit by tuning the frequency until it is roughly 0.7 times the amplitude of the input \n",
     "(where did that number come from?) Compare that to the one you calculated. Explain any differences.\n",
     "\n",
-    "** QUestion 5.4 (Bonus) ** Let's say that you want to suppress the 60 Hz interference even further. What are some options you can try? \n"
+    "** QUestion 5.4 (Bonus) ** Let's say that you want to suppress the 60 Hz interference even further. What are some options you can try? What are the trade-offs\n",
+    "/risks to those options?\n"
    ]
   },
   {
@@ -325,14 +326,10 @@
     "\n",
     "\n",
     "\n",
-    "## Python and Serial Data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The block of code below imports the necessary libraries for most of the processing you'll want to do"
+    "## Python and Serial Data\n",
+    "\n",
+    "The block of code below imports the necessary libraries for most of the processing you'll want to do\n",
+    "\n"
    ]
   },
   {
