added images and reformatted parts of lab3 and lab4 markdown, still need to redo and polish lab2

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -29,44 +29,55 @@
    "source": [
     "##1.  Displaying signals in time and frequency domain with Python\n",
     "\n",
-    "a. Connect your function generator to the MyDAQ analog input 0. Make sure\n",
+    "\n",
+    "- Connect your function generator to the MyDAQ analog input 0. Make sure\n",
     "the ground wire is connected to ground on your MyDAQ. You will need to\n",
     "use the BNC binding post adapters and two pieces of wire.\n",
-    "b. Add a “DAQ Assist” block to your block diagram. Configure this block to\n",
+    "\n",
+    "- Add a “DAQ Assist” block to your block diagram. Configure this block to\n",
     "acquire voltage signals from analog input 0. Use the appropriate settings to\n",
     "record waveforms with a maximum frequency of 500Hz (Nyquist) and\n",
     "10Vpp. The samples to read buffer should be set up so that the buffer will\n",
     "span a half second. \n",
-    "i. Labview will automatically place your DAQ Assist block inside a\n",
+    "\n",
+    "    i. Labview will automatically place your DAQ Assist block inside a\n",
     "while loop to enable continuous acquisition. It will not, however,\n",
     "enclose the rest of the components you create below in a while loop.\n",
     "You should create a single while loop now to enclose everything\n",
     "created below.\n",
-    "c. Once your DAQ Assistant is set up, add a waveform graph to your front\n",
+    "\n",
+    "- Once your DAQ Assistant is set up, add a waveform graph to your front\n",
     "panel (note: don’t use a waveform “chart”…it’s behavior is slightly different)\n",
-    "d. Connect the “data” output of your DAQ Assistant block to the input of your\n",
+    "\n",
+    "- Connect the “data” output of your DAQ Assistant block to the input of your\n",
     "Waveform Graph. Make sure the Graph is located within the while loop on\n",
     "your block diagram so that it gets updated every time the loop executes.\n",
-    "e. Set your function generator to output a sinusoid at 100Hz, 2Vpp.\n",
-    "f. Run your Labview VI and verify that you can see the signal from the function\n",
+    "\n",
+    "- Set your function generator to output a sinusoid at 100Hz, 2Vpp.\n",
+    "\n",
+    "- Run your Labview VI and verify that you can see the signal from the function\n",
     "generator. Do this with a waveform graph, not waveform chart. By default,\n",
     "the axes autoscale. You can manually adjust the X/Y scale of the graph by\n",
     "right clicking on the axes and turning off autoscale and then clicking on the\n",
     "labels and changing them yourself, or by right clicking on the graph and\n",
     "editing the property pages. Experiment with it until you get a comfortable\n",
     "view of your waveform.\n",
-    "g. Now add a “Spectral Measurement” block from the list of Express VIs.\n",
+    "\n",
+    "- Now add a “Spectral Measurement” block from the list of Express VIs.\n",
     "Configure it with the following parameters:\n",
     "i. Magnitude RMS, dB\n",
     "ii. Hanning window\n",
-    "h. Connect the “data” output of the DAQ Assistant to the “Signals” input of the\n",
+    "\n",
+    "- Connect the “data” output of the DAQ Assistant to the “Signals” input of the\n",
     "Spectral Measurements.\n",
-    "i. Connect the “FFT (RMS)” output to another waveform graph (again, not\n",
+    "\n",
+    "- Connect the “FFT (RMS)” output to another waveform graph (again, not\n",
     "chart). Note that by default the X axis is “time”, so you should change this to\n",
     "“frequency” by double-clicking on the text and renaming it. FFT stands for\n",
     "“Fast Fourier Transform” and it is a computationally efficient algorithm for\n",
     "computing a Fourier transform.\n",
-    "j. Set your function generator to a 100 Hz, 1V sine wave. Run your VI and\n",
+    "\n",
+    "- Set your function generator to a 100 Hz, 1V sine wave. Run your VI and\n",
     "verify that you observe a peak in the frequency domain corresponding to the\n",
     "frequency of your function generator. Note that the frequency span is set to 0-\n",
     "500 Hz automatically, based on your sampling rate of 1 kHz.\n",
