--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -11,7 +11,10 @@
     "<a id='objectives'></a>\n",
     "- Learn how to use an oscilloscope and function generator.<br>\n",
     "- Learn to use breadboard to build and test simple circuits like resistive voltage divider, and RLC filter.<br>\n",
-    "- Learn how to use an Arduino and Python to acquire signals.<br>"
+    "- Learn how to use an Arduino and Python to acquire signals.<br>\n",
+    "\n",
+    "## Lab Report ##\n",
+    "Answer the questions in the lab procedure with your partner in a separate document."
    ]
   },
   {
@@ -23,7 +26,7 @@
     "- Your team should have the following items on your station: oscilloscope (with one test probe), function generator, power supply, Arduino Uno (with grey serial cable), multi-meter, breadboard, jumperwire kits, pliers, BNC cable and adaptors.\n",
     "- You can get the electronic parts such as the resistors, capacitors, diodes, etc. from the supply bins near the cable rack.\n",
     "- Please keep all the lab equipment in lab only.\n",
-    "- Before you leave the lab, make sure the power for all the equipment is switched off."
+    "- Before you leave the lab, make sure the power for all the equipment is switched off.\n"
    ]
   },
   {
@@ -98,10 +101,10 @@
     "see what happens to your signal.\n",
     "\n",
     "\n",
-    "<strong>Question 2.3</strong>\n",
+    "<strong>Question 2.3:</strong>\n",
     "What is (roughly) the largest and smallest voltage that you could observe with this scope (hint: try changing the volts/div knob to see the limits)? What is (roughly) the fastest and slowest frequency that you could observe with this scope?\n",
     "\n",
-    "<strong>Question 2.4</strong>\n",
+    "<strong>Question 2.4:</strong>\n",
     "What happens when you set the trigger to a voltage that your sine wave never reaches?\n",
     "\n",
     "- Play with the function generator and see how the signal changes. Try changing the\n",
@@ -116,7 +119,7 @@
     "that the amplitude is 1V and the period is 1/100 = 10ms.\n",
     "\n",
     "\n",
-    "<strong>Question 2.5</strong>\n",
+    "<strong>Question 2.5:</strong>\n",
     "Is 1V the peak-to-peak amplitude, the RMS amplitude, or the peak\n",
     "amplitude?\n",
     "\n",
@@ -130,7 +133,7 @@
     "- Try changing the function generator to a square wave, then to a sawtooth wave.\n",
     "\n",
     "\n",
-    "<strong>Question 2.6</strong>\n",
+    "<strong>Question 2.6:</strong>\n",
     "How do the 3 measurement quantities on your scope (average value, RMS\n",
     "value, and frequency) change for a sine, square, and triangle wave? Explain what you see."
    ]
@@ -161,7 +164,7 @@
     "are typically used for providing power to the circuits being built within the terminal\n",
     "strips area.\n",
     "\n",
-    "**Question 3.1** How can you test your own breadboard to determine its interconnection\n",
+    "**Question 3.1:** How can you test your own breadboard to determine its interconnection\n",
     "pattern? Draw a simple diagram to explain how the holes in your breadboard are\n",
     "interconnected.\n",
     "\n",
@@ -215,14 +218,20 @@
     "reading the number on the display panel. Hook the output of the power supply to\n",
     "the breadboard. Test the voltage output using the multi-meter.\n",
     "\n",
-    "**Question 4.2** What is the output voltage? Explain how this circuit can be worked as a\n",
+    "<br><br>\n",
+    "<center>\n",
+    "<img src=\"http://puu.sh/thnD7/02bb5736e7.jpg\" align=\"center\" style=\"height:300px\" />\n",
+    "</center>\n",
+    "<br><br>\n",
+    "\n",
+    "**Question 4.2:** What is the output voltage? Explain how this circuit can be worked as a\n",
     "voltage divider? Can I use small resistors (like $1\\Omega$) for this application and why?\n",
     "\n",
     "- RC filter: you can turn the resistive voltage divider into a filter by simply replacing\n",
     "R2 by a capacitor. Choose $R$ to be $3.3\\text{k}\\Omega$ and $C$ to be $0.01 \\mu\\text{F}$. Build the RC\n",
     "circuit on the breadboard. Analyze this circuit and answer the following questions.\n",
     "\n",
-    "**Question 4.3** What type of filter is it (high-pass, low-pass, band-pass, band-stop)? What is\n",
+    "**Question 4.3:** What type of filter is it (high-pass, low-pass, band-pass, band-stop)? What is\n",
     "the cut-off frequency of this filter (here we use the $-3\\text{dB}$ definition)? Sketch the Bode plot of\n",
     "your filter.\n",
     "\n",
@@ -230,7 +239,7 @@
     "the oscilloscope. Tune the function generator to output a sine wave of frequency\n",
     "9kHz, 5 Vpeak, 50 % duty cycle, 0V offset.\n",
     "\n",
-    "**Question 4.4** What does the output signal look like? How does it compare to the input\n",
+    "**Question 4.4:** What does the output signal look like? How does it compare to the input\n",
     "signal? Is this what you would expect? How would you experimentally get the Bode plot?"
    ]
   },
@@ -304,17 +313,17 @@
     "\n",
     "Let's get rid of that pesky 60 Hz interference from the power lines. \n",
     "\n",
-    "** Question 5.1 ** Build a first order RC lowpass Filter that would take care of the problem. What will your RC value and cut-off frequency be? (Hint: don't forget that \n",
+    "** Question 5.1:** Build a first order RC lowpass Filter that would take care of the problem. What will your RC value and cut-off frequency be? (Hint: don't forget that \n",
     "annoying $2\\pi$ factor)? Is it okay that we're filtering every frequency past that cut-off frequency?\n",
     "\n",
-    "** Question 5.2 ** Let's test that the circuit actually filters out the 60 Hz. Let our desired signal be 5 Hz. Send that through the arduino and \n",
+    "** Question 5.2:** Let's test that the circuit actually filters out the 60 Hz. Let our desired signal be 5 Hz. Send that through the arduino and \n",
     "view the waveform. Now send 60 Hz through the arduino and view it. What is the difference in magnitude of those frequencies, \n",
     "assuming the input amplitude was the same?\n",
     "\n",
-    "** Question 5.3 ** Find the cut-off frequency of your real circuit by tuning the frequency until it is roughly 0.7 times the amplitude of the input \n",
+    "** Question 5.3: ** Find the cut-off frequency of your real circuit by tuning the frequency until it is roughly 0.7 times the amplitude of the input \n",
     "(where did that number come from?) Compare that to the one you calculated. Explain any differences.\n",
     "\n",
-    "** QUestion 5.4 (Bonus) ** Let's say that you want to suppress the 60 Hz interference even further. What are some options you can try? What are the trade-offs\n",
+    "** (Bonus) Question 5.4: ** Let's say that you want to suppress the 60 Hz interference even further. What are some options you can try? What are the trade-offs\n",
     "/risks to those options?\n"
    ]
   },
