Fleshed out the rest of Lab 2 and made a few other misc fixes on what was there before. Ready for inspection and cleanup, whereupon extraneous material can be removed

--- a/lab2/lab2.ipynb
+++ b/lab2/lab2.ipynb
@@ -209,6 +209,16 @@
    "source": [
     "## Part 1: IPython ##\n",
     "\n",
+    "<li><b>a.</b> Connect your function generator to A0 and GND on your Arduino. You will need to use the BNC binding post adapters and two pieces of wire. \n",
+    "    \n",
+    "<li><b>b.</b> Generate a signal with frequency 30Hz and 1V peak-to-peak amplitude.\n",
+    "    \n",
+    "<li><b>c.</b> Run the signal acquisition and plotting code to plot the signal in Python.\n",
+    "   \n",
+    "<li><b>d.</b> Observe: is the input signal represented accurately, or has aliasing occurred? Has harmonic distortion?\n",
+    "   \n",
+    "<li><b>e.</b> Now, zoom in the Python plot. Can you observe quantization error?\n",
+    "\n",
     "### _Clean up later_ :\n",
     "get a sample waveform from a function generator, sample with arduino, feed it through serial and plot the signal and its dft\n",
     "\n",
@@ -217,14 +227,7 @@
     "observe harmonic distortion with dft\n",
     "\n",
     "oberserve quantization error with zoomed in python plot\n",
-    "\n",
-    "## Part 2: Microphone ##\n",
-    "\n",
-    "\n",
-    "measure noise - measure without voice\n",
-    "measure signal - measure peak amplitude of signal\n",
-    "\n",
-    "distinguish between you and partner's voice - compare peaks of cross correlated voice data "
+    "\n"
    ]
   },
   {
@@ -232,53 +235,18 @@
    "metadata": {},
    "source": [
     "Follow the sample produre from Lab1 to set up the arduino with a function generator：\n",
-    "1. Start the Arduino IDE and open the .ino file in your lab1 folder\n",
-    "2. Under \"Tools\", select \"Arduino/Genuino Uno\" as your Board and select the COM Port corresponding to your board.\n",
-    "3. Set the sampleing Rate to be 100 samples/sec. \n",
-    "4. Click the arrow button next to the check button to upload your code to your board. The text near the bottom of the IDE should say your code was uploaded successfully.\n",
-    "5. Give a 30Hz 1volt peak to peak signal to the adrino board and start the plotting.  "
+    "<li><b>1.</b> Start the Arduino IDE and open the .ino file in your lab1 folder\n",
+    "<li><b>2.</b> Under \"Tools\", select \"Arduino/Genuino Uno\" as your Board and select the COM Port corresponding to your board.\n",
+    "<li><b>3.</b> Set the sampling Rate to be 100 samples/sec.\n",
+    "<li><b>4.</b> Click the arrow button next to the check button to upload your code to your board. The text near the bottom of the IDE should say your code was uploaded successfully.\n",
+    "<li><b>5.</b> Give a 30Hz 1volt peak to peak signal to the adrino board and start the plotting.  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Question 1 : What did you observe in the plotter? Does this obey the Nyquist Sampling Therom? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer: "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now, change the frequency of the input source to be 1 volt peak-to-peak with 50Hz, 60Hz and 80Hz in the function generator.   "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Question 2: What did you observe in the plotter? Does this obey the Nyquist Sampling Therom? "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Answer:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "The Python code below is an introduction on how to use \"fft\" and \"ifft\" fucntion form \"scipy.fftpack\" to do fourier transfrom and inverse fourier transform. In the given arduino file, you already send the file to Serial after each run. Here, We import the data from Serial and do Fourier Analysis for it. After you run the arduino file, plaese run the code below. Make sure you "
+    "The Python code below is an introduction on how to use \"fft\" and \"ifft\" fucntion form \"scipy.fftpack\" to do fourier transfrom and inverse fourier transform. In the given arduino file, you already send the file to Serial after each run. Here, We import the data from Serial and do Fourier Analysis for it. After you run the Arduino file, please run the code below."
    ]
   },
   {
@@ -414,6 +382,293 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 1 : \n",
+    "What did you observe in the plotter? Does this obey the Nyquist Sampling Therom? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now, change the frequency of the input source to be 1 volt peak-to-peak with 50Hz, 60Hz and 80Hz in the function generator.   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 2: \n",
+    "What did you observe in the plotter with the modified functions? Does this obey the Nyquist Sampling Therom? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 3: \n",
+    "Switch the input waveform between a 50 Hz square wave and a 50 Hz sine wave. How does the frequency spectrum change between the square and sine wave?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<u>Observing noise using oscilloscope:</u>\n",
+    "(2 students, requires oscilloscope)\n",
+    "  <li><b>a. </b>You can disconnect your function generator and turn it off.\n",
+    "  <li><b>b. </b>The next set of questions uses the HP oscilloscope at your lab station."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 4: \n",
+    "What is the RMS noise voltage that the oscilloscope sees without anything connected (no probe, no cables)? \n",
+    "You may need to increase the Volts/div significantly to see this, and you will want to use “Auto” triggering. Remember that you can make this measurement by pressing the “Measure” button."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now connect the BNC binding post adapter and connect the banana wires to the binding posts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 5: \n",
+    "What is the RMS noise voltage now? Why did it change?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 6: \n",
+    "Move the positive wire around. What happens when you place it near fans or power cables behind the computer?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 7: \n",
+    "Hold the positive/negative banana wires straight, parallel, and close together. Observe the RMS noise. Then spread them apart. What happens to the RMS noise? What happens when you touch the positive terminal? Why is the noise changing in these cases?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "## Part 2: Microphone ##\n",
+    "\n",
+    "In this section, you will connect a simple microphone to your Arduino and measure noise and voice signal. You will then develop an algorithm to distinguish between your and your partner's voices.\n",
+    "\n",
+    "The microphones you have are known as “electret” condenser microphones.\n",
+    "The sensing element can be thought of as a small capacitor that changes its\n",
+    "capacitance as a function of acoustic pressure. The sensing element is then\n",
+    "connected to a transistor, which converts the capacitance into a voltage signal.\n",
+    "\n",
+    "Transistors are active, meaning they need to be powered by an external\n",
+    "voltage with a series resistor. Hence, in your microphone assemblies, there\n",
+    "are several leads—two short wires (one with a resistor, one without) which\n",
+    "should be connected to analog input 0+ and 0- on your MyDAQ, respectively,\n",
+    "and two long wires which should be connected to +5V (red) and DGND\n",
+    "(black). Check out this Wikipedia entry:\n",
+    "http://en.wikipedia.org/wiki/Electret_microphone.\n",
+    "\n",
+    "### _Clean up later_:\n",
+    "\n",
+    "measure noise - measure without voice\n",
+    "measure signal - measure peak amplitude of signal\n",
+    "\n",
+    "distinguish between you and partner's voice - compare peaks of cross correlated voice data "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 8: \n",
+    "What function do you think the serial resistor serves? \n",
+    "Remember, the resistor is hooked up between 5V and the output signal."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 9: \n",
+    "What is the RMS noise voltage (in dB) with the microphone connected (without anyone talking into the microphone - make sure to connect 5V power)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 10: \n",
+    "Talk into the microphone at a comfortable level. What is the approximate RMS voltage that you generate while talking? What is your SNR (in dB)?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<u>Processing audio signals using Python</u>\n",
+    "\n",
+    "Modify the Arduino code once more to sample at 10kHz. Run the plotting code again (feel free to insert cells below this and copy it if you find that more convenient) and verify that you can see signals from your micophone and that your frequency display now shows appropriate values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 11: \n",
+    "Use the x-axis scale to zoom in on a very small time/voltage window of your signal, so you’re only looking at noise. Notice the quantization error. Can you estimate the voltage step size of the ADC (i.e., the voltage increment corresponding to the least significant bit)? Compare this to the RMS noise voltage of the microphone that you measured with the scope and comment on whether it is a problem or not. How many bits of noise do you have?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:<b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 14: \n",
+    "Pick the best singer in your team and have that person try to hum a pure\n",
+    "tone. Observe the time/frequency plots. What is the range of frequencies that you can hum? How close are these to pure tones (i.e. single frequency sinusoids)? If you’re musically inclined, try humming a scale and observing how the frequency spectrum changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do you notice any differences between the spectrum of you and your\n",
+    "partner’s voice? These should be particularly apparent if you have a male-female team. For the remainder of the lab, try to use SciPy's built-in functions to develop an algorithm to distinguish the two of you using the data in the frequency or time domain. The algorithm should output two Boolean values: one for each of you. There are many approaches to this, so be creative. Here are some ideas:\n",
+    "\n",
+    "<li><b> i. </b>Make a decision using the power and fundamental frequency, with appropriate thresholds for each. If power is over a certain amount, assume that someone is talking. If the peak frequency is above/below a certain amount select one person or the other.\n",
+    "\n",
+    "<li> <b>ii.</b> Record two waveforms of you and your partner saying the same thing. Store these two waveforms in a variable. Then use cross-correlation to compare the sampled waveforms with these saved waveforms. If the cross-correlation is particularly high, consider it as a match. <b>Hint:</b> You may find this documentation helpful: https://docs.scipy.org/doc/scipy/reference/generated/scipy.signal.correlate.html"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Question 15: \n",
+    "Write out your approach (even if you don’t get it to work) and insert the code in the cell below."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Bonus Question!\n",
+    "If you chose a method that involves a threshold (either on frequency\n",
+    "or RMS), try varying the threshold and seeing how many times your classifier gives true/false positives and true/false negatives. Build a ROC curve for your method!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#Your code goes here"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -426,7 +681,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -440,7 +695,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
