Lab 3 expanded and ready for inspection

--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -17,22 +17,20 @@
     "\n",
     "- Find Thevenin equivalent circuits\n",
     "\n",
-    "- Design logic in LabView to calibrate and output pressure levels\n",
+    "- Design logic in Python to calibrate and output pressure levels\n",
     "\n",
     "- Determine the unknown pressure\n",
     "\n",
-    "Teams will each turn in one list of answers to the questions in this lab. List all partners’\n",
-    "names and section numbers.\n",
+    "Teams will each turn in one list of answers to the questions in this lab. List all partners’ names and section numbers.\n",
     "\n",
     "## 1. Schedule and lab reports\n",
     "\n",
     "\n",
-    "-  Week 1: Commercial force sensor with MyDAQ\n",
-    "Sections 3 - 5 (Questions 1 - 10) due at the start of the second week of Lab #3\n",
+    "-  Week 1: Commercial force sensor with Arduino\n",
+    "Sections 3 - 5 (Questions 1 - 9) due at the start of the second week of Lab #3\n",
     "\n",
     "-  Week 2: DIY homemade pressure sensor\n",
-    "Section 6 (Questions 11 - 13) due the following week electronically to your lab\n",
-    "GSI or in person during class on 2/23.\n",
+    "Section 6 (Questions 10 - 12) due the following week electronically to your lab GSI or in person during class on 2/23.\n",
     "\n",
     "## 2. Setup\n",
     "-  You and your partner should have the following items: Pressure sensor,\n",
@@ -58,11 +56,39 @@
     "<br></br>\n",
     "\n",
     "The specsheet of the FSR we use today can be found at\n",
-    "https://www.sparkfun.com/products/9376\n",
+    "https://www.sparkfun.com/products/9376\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br></br>\n",
+    "<center>\n",
+    "<img src=\"wheatstone.png\" align=\"center\" style=\"height:350px\" />\n",
+    "</center>\n",
+    "<br></br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "**Question 1:** What type of sensor is this? Does it give a voltage or current (or neither)\n",
-    "output signal?\n",
-    "\n",
+    "**Question 1:** What type of sensor is this? Does it give a voltage or current (or neither) output signal?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "-  You will now calculate the nominal sensing resistance of your sensor. Note:\n",
     "Do not use the sensing/load resistance values from the datasheet in the next\n",
     "sections. Instead, calculate it empirically as follows.\n",
@@ -73,12 +99,22 @@
     "for powering your circuit. Configure your voltage divider so the FSR is\n",
     "connected to GND, and use an oscilloscope or the serial plotter.\n",
     "\n",
-    "**Question 2:** What is the resistance of your FSR with an empty falcon tube placed on the\n",
-    "sensor? With a 100g mass? Show your work. Sketch and label your circuit, and write\n",
-    "down what weight you used.\n",
-    "Pro-Tip: To help with consistency of your measurements, tape down the FSR and let the\n",
+    "**Question 2:** What is the resistance of your FSR with an empty falcon tube placed on the sensor? With a 100g mass? Show your work. Sketch and label your circuit, and write down what weight you used. Pro-Tip: To help with consistency of your measurements, tape down the FSR and let the\n",
     "measurement ‘settle’ for 2-3 min to reach steady-state before recording.\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 4. Building matched resistance Wheatstone bridges\n",
     "\n",
     "- Build a matched Wheatstone bridge with your sensor, choosing resistor\n",
@@ -96,10 +132,34 @@
     "\n",
     "** Question 3:** Imagine that the Wheatstone bridge is actually two different voltage\n",
     "dividers in parallel. Calculate the voltage at Vc and Vd. Then, assuming that zero\n",
-    "current passes between Vc and Vd, find an equation that describes Vout.\n",
-    "\n",
-    "** Question 4:** Find an equation that describes Rs as a function of R1, Vbias, and Vout.\n",
-    "\n",
+    "current passes between Vc and Vd, find an equation that describes Vout."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Question 4:** Find an equation that describes Rs as a function of R1, Vbias, and Vout."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 5. Data Analysis and Analog Output\n",
     "\n",
     "- Connect Vc and Vd of your voltage divider to the two analog inputs (AI 0+\n",
@@ -110,7 +170,20 @@
     "\n",
     "**Question 5:** What is the steady state differential voltage between the two input\n",
     "terminals? Remember you may have to let the voltage differential ‘settle’ for many\n",
-    "minutes before it reaches steady-state.\n",
+    "minutes before it reaches steady-state.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
     "- Standard objects (50 mL Falcon tubes containing different materials) have\n",
     "different weights. Determine the voltage differentials that correspond to these\n",
@@ -122,47 +195,72 @@
     "load).\n",
     "\n",
     "**Question 6:** What did you find as the equation of your weight-resistance plot? Plot it in\n",
-    "R, Excel, etc. or draw it below. Note that answers may vary between groups.\n",
-    "\n",
+    "R, Excel, etc. or use a PyPlot cell below. Note that answers may vary between groups.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Question 7:** Using the linear model from above, calculate the weight of the mysterious\n",
-    "object.\n",
-    "\n",
+    "object."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "- Make a physical LED light up according to the amount of force detected by\n",
-    "the sensor. To do this, you can use an Analog Output port of the MyDAQ\n",
-    "(terminal AO0). This terminal can be directly plugged into a LED through a\n",
-    "current-limiting resistor to ground. Try to limit the total current through the\n",
-    "LED to no more than 20mA. ProTip: You might need to multiply or\n",
-    "manipulate the voltage sent to AO0 within LabView to make the LED light\n",
-    "up, as a small voltage (of e.g. 0.1V) is likely insufficient to power an LED and\n",
-    "the voltage can’t be negative. Remember that LEDs are diodes and must be\n",
-    "connected in the proper orientation to function.\n",
+    "the sensor. To do this, you can use a PWM pin on the Arduino (3, 5, 6, 9, 10, or 11). This terminal can be directly plugged into a LED through a\n",
+    "current-limiting resistor to ground. Try to limit the total current through the LED to no more than 20mA.\n",
     "\n",
-    "- In LabView, create a DAQAssist module and set it to Analog Output. The\n",
-    "input into this output DAQ Assistant is the same waveform that you acquired\n",
-    "from the AI 0+ and 0-. You will need to place boundaries on the signal from\n",
-    "0-5V first, as the analog out of the MyDAQ cannot produce negative voltages.\n",
-    "Verify that the brightness of the LED changes with varying pressure or\n",
-    "weight sensed.\n",
+    "**Question 8:** Find another method to communicate pressure, and write down your approach. Some possible ideas to get you started: \n",
+    "<li>(1) create a series of Digital Output\n",
+    "LEDs that light up sequentially with increasing pressure \n",
+    "<li>(2) play a sine wave in the computer’s speakers, where the frequency is determined by pressure. Be creative!\n",
+    "Attach a picture of your circuit board here if you had time to implement your method. Otherwise, a description is fine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 9:** Find one biomedical application of force sensor, and briefly describe how it works."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "\n",
-    "- Hint: If you are getting timing related errors, refer to the MyDAQ spec\n",
-    "sheet, pg. 32 (Audio example) on how to setup a DAQ Assistant Vis for\n",
-    "simultaneous analog input and analog output. Although the example\n",
-    "uses the audio input and output ports, the way the VI is designed is\n",
-    "similar. Pay special attention to how the samples are acquired (number\n",
-    "of samples, rate).\n",
-    "\n",
-    "\n",
-    "**Question 8:** Attach a screenshot of your VI and block diagram here.\n",
-    "\n",
-    "**Question 9:** Find another method to communicate pressure, and write down your\n",
-    "approach. Some possible ideas to get you started: (1) create a series of Digital Output\n",
-    "LEDs that light up sequentially with increasing pressure (2) play a sine wave in the\n",
-    "computer’s speakers, where the frequency is determined by pressure. Be creative!\n",
-    "Attach a screenshot of your VI/block diagram and circuit board here if you had time to\n",
-    "implement your method. Otherwise, a description is fine.\n",
-    "\n",
-    "**Question 10:** Find one biomedical application of force sensor, and briefly describe how\n",
-    "it works.\n",
     "You can keep your set up for next week to test your homemade pressure sensor.\n",
     "\n",
     "## 6. Build a homemade pressure sensor\n",
@@ -178,13 +276,37 @@
     "week.\n",
     "\n",
     "\n",
-    "**Question 11:** What is the steady-state resistance with no load?\n",
-    "\n",
-    "**Question 12:** Experimentally make a weight vs. resistance curve by measuring a few\n",
+    "**Question 10:** What is the steady-state resistance with no load?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 11:** Experimentally make a weight vs. resistance curve by measuring a few\n",
     "objects of different weights. How does the resistance of the sensor change when\n",
-    "pressure/weight is applied?\n",
-    "\n",
-    "**Question 13:** How sensitive is your device as compared to a commercial FSR? What is\n",
+    "pressure/weight is applied?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<b>Answer:</b>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Question 12:** How sensitive is your device as compared to a commercial FSR? What is\n",
     "the smallest detectable weight of the commercial device, and your device?"
    ]
   },
@@ -192,23 +314,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<br></br>\n",
-    "<center>\n",
-    "<img src=\"wheatstone.png\" align=\"center\" style=\"height:350px\" />\n",
-    "</center>\n",
-    "<br></br>\n",
-    "\n",
-    "<br></br>\n",
-    "<center>\n",
-    "<img src=\"https://cdn.sparkfun.com//assets/parts/2/9/6/8/09376-1.jpg\" align=\"center\" style=\"height:350px\" />\n",
-    "</center>\n",
-    "<br></br>"
+    "<b>Answer:</b>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -222,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.3"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
