--- a/lab1/lab1 - Answers.ipynb
+++ b/lab1/lab1 - Answers.ipynb
@@ -64,29 +64,50 @@
     "<a id = 'oscope_questions'></a>\n",
     "<strong>Question 2.1:</strong> What is the bandwidth of this oscilloscope? What does that mean for the signals you will be able to observe with it? What would the sampling rate of the ADC inside the scope have to be in order to achieve this bandwidth?\n",
     "\n",
+    "<font color='red'>The bandwidth of the oscilloscope is 0-500 MHz. That means that we can't observe signals of higher frequency. The sampling rate must be 1000 MHz minimum.</font>\n",
+    "\n",
     "<strong>Question 2.2:</strong>\n",
     "What is the input impedance of this scope? Why would that matter?\n",
     "\n",
-    "- Use the BNC cable to directly connect the output of the function generator to channel 1 of the oscilloscope. Make sure channel 1 is on and the scope is acquiring signals.\n",
+    "- Use the BNC cable to directly connect the output of the function generator to\n",
+    "channel 1 of the oscilloscope. Make sure channel 1 is on and the scope is acquiring\n",
+    "signals.\n",
     "\n",
-    "- Set the function generator to a 100 Hz, 1V peak sine wave (2V peak-to-peak) with 0V offset. The BK Precision 4052 function generators uses peak-to-peak by default and the HP 8116A function generators  use peak by default. Turn on the output by pressing the “disable” button so the light goes off (for the HP 8116A function generators) or by pressing the output button so that the button lights up (for the BK Precision 4052 function generators).\n",
+    "- Set the function generator to a 100 Hz, 1V sine wave with 0V offset. Turn on the\n",
+    "output by pressing the “disable” button so the light goes off.\n",
     "\n",
-    "- Adjust the scope time and voltage scales to comfortably see several periods of the waveform. To do this, you will need to familiarize yourself with 3 controls:\n",
+    "- Adjust the scope time and voltage scales to comfortably see several periods of the\n",
+    "waveform. To do this, you will need to familiarize yourself with 3 controls:\n",
     "\n",
-    "    - Volts/Div: This sets the Y scale of each channel (channel 1 and 2 are set independently). The current scale is in the upper left corner of the screen. A value of 500mV, for example, means that each horizontal line in the grid corresponds to 500mV.\n",
+    "    - Volts/Div: This sets the Y scale of each channel (channel 1 and 2 are set\n",
+    "independently). The current scale is in the upper left corner of the screen. A value\n",
+    "of 500mV, for example, means that each horizontal line in the grid corresponds to\n",
+    "500mV.\n",
     "\n",
-    "    - Time/Div: This sets the X scale of both channels (they must be the same). The current value is in the upper right corner of the screen. Note that as you “zoom out” on the waveform, the sampling rate drops.\n",
-    "    \n",
-    "    - Voltage Position: Each channel has an additional knob that lets you move the waveform up and down on the screen. This is useful when you want to display multiple waveforms.\n",
+    "    - Time/Div: This sets the X scale of both channels (they must be the same). The\n",
+    "current value is in the upper right corner of the screen. Note that as you “zoom out”\n",
+    "on the waveform, the sampling rate drops.\n",
     "\n",
-    "    - Trigger Source, Mode, and Level: The trigger is useful for synchronizing your display to the signal so it doesn’t scroll across your screen. Edge triggering (also called “normal” triggering) causes the display to refresh only when the signal crosses the threshold amplitude. You can trigger on either channel 1 or 2, and you can adjust the triggering threshold. You can also specify whether you want the signal to trigger on a low-high transition or a high-low transition. If “auto” is selected, the trigger values are ignored and the screen constantly refreshes. Auto triggering can be useful initially for setting up scope parameters. Try adjusting the trigger parameters and see what happens to your signal.\n",
+    "    - Voltage Position: Each channel has an additional knob that lets you move the\n",
+    "waveform up and down on the screen. This is useful when you want to display\n",
+    "multiple waveforms.\n",
+    "\n",
+    "    - Trigger Source, Mode, and Level: The trigger is useful for synchronizing your display\n",
+    "to the signal so it doesn’t scroll across your screen. Edge triggering (also called\n",
+    "“normal” triggering) causes the display to refresh only when the signal crosses the\n",
+    "threshold amplitude. You can trigger on either channel 1 or 2, and you can adjust the\n",
+    "triggering threshold. You can also specify whether you want the signal to trigger on\n",
+    "a low-high transition or a high-low transition. If “auto” is selected, the trigger values\n",
+    "are ignored and the screen constantly refreshes. Auto triggering can be useful\n",
+    "initially for setting up scope parameters. Try adjusting the trigger parameters and\n",
+    "see what happens to your signal.\n",
     "\n",
     "\n",
     "<strong>Question 2.3:</strong>\n",
     "What is (roughly) the largest and smallest voltage that you could observe with this scope (hint: try changing the volts/div knob to see the limits)? What is (roughly) the fastest and slowest frequency that you could observe with this scope?\n",
     "\n",
     "<strong>Question 2.4:</strong>\n",
-    "What happens when you set the trigger to a voltage that your sine wave never reaches? (hint: set your trigger mode to normal, since auto will not let you do this)\n",
+    "What happens when you set the trigger to a voltage that your sine wave never reaches?\n",
     "\n",
     "- Play with the function generator and see how the signal changes. Try changing the\n",
     "frequency, amplitude, offset, and waveform type (sine, square, triangle). When\n",
@@ -101,9 +122,15 @@
     "\n",
     "\n",
     "<strong>Question 2.5:</strong>\n",
-    "Is 1V the peak-to-peak amplitude, the RMS amplitude, or the peak amplitude?\n",
+    "Is 1V the peak-to-peak amplitude, the RMS amplitude, or the peak\n",
+    "amplitude?\n",
     "\n",
-    "- You can also have the scope automatically measure voltage and timing parameters by pressing the Voltage/Time buttons under the “Measure” label. You can have it display 3 different quantities at a time. Try displaying the average voltage value, RMS voltage value, and frequency of your waveform. Make sure “Source” is set to channel 1.\n",
+    "\n",
+    "- You can also have the scope automatically measure voltage and timing parameters\n",
+    "by pressing the Voltage/Time buttons under the “Measure” label. You can have it\n",
+    "display 3 different quantities at a time. Try displaying the average voltage value,\n",
+    "RMS voltage value, and frequency of your waveform. Make sure “Source” is set to\n",
+    "channel 1.\n",
     "\n",
     "- Try changing the function generator to a square wave, then to a sawtooth wave.\n",
     "\n",
@@ -144,9 +171,16 @@
     "interconnected.\n",
     "\n",
     "\n",
-    "- In this lab, we will be using wires (called jumper wires) with 22 AWG (American wire gauge, denotes thickness of wire) can be used to connect two electronic parts. The wire ends should be stripped 3/16’’ to 5/16’’. Shorter stripped wires might result in bad contact with the board’s spring clips (insulation being caught in the springs). Longer stripped wires increase the likelihood of shortcircuits on the board. Needle-nose pliers and tweezers are helpful when inserting or  removing wires, particularly on crowded boards. One tip for keeping your circuit neat and readable is to use different color wires for different signal paths.\n",
+    "- Jumper wires with 22 AWG (American wire gauge) can be used to connect two\n",
+    "electronic parts. The wire ends should be stripped 3/16’’ to 5/16’’. Shorter stripped\n",
+    "wires might result in bad contact with the board’s spring clips (insulation being\n",
+    "caught in the springs). Longer stripped wires increase the likelihood of shortcircuits\n",
+    "on the board. Needle-nose pliers and tweezers are helpful when inserting or \n",
+    "removing wires, particularly on crowded boards. One tip for keeping your circuit\n",
+    "neat and readable is to use different color wires for different signal paths.\n",
     "\n",
-    "- The breadboard is reusable after each time by removing all the parts and jumper wires from the board. "
+    "- The breadboard is reusable after each time by removing all the parts and jumper\n",
+    "wires from the board. "
    ]
   },
   {
@@ -197,7 +231,7 @@
     "\n",
     "- RC filter: you can turn the resistive voltage divider into a filter by simply replacing\n",
     "R2 by a capacitor. Choose $R$ to be $3.3\\text{k}\\Omega$ and $C$ to be $0.01 \\mu\\text{F}$. Build the RC\n",
-    "circuit on the breadboard. Answer the following questions:\n",
+    "circuit on the breadboard. Analyze this circuit and answer the following questions.\n",
     "\n",
     "**Question 4.3:** What type of filter is it (high-pass, low-pass, band-pass, band-stop)? What is\n",
     "the cut-off frequency of this filter (here we use the $-3\\text{dB}$ definition)? Sketch the Bode plot of\n",
@@ -205,9 +239,9 @@
     "\n",
     "- Connect the input Vin of this filter to the function generator and hook the output to\n",
     "the oscilloscope. Tune the function generator to output a sine wave of frequency\n",
-    "9kHz, 5 Vpeak, 0V offset.\n",
+    "9kHz, 5 Vpeak, 50 % duty cycle, 0V offset.\n",
     "\n",
-    "**Question 4.4:** How does the output signal compare to the input\n",
+    "**Question 4.4:** What does the output signal look like? How does it compare to the input\n",
     "signal? Is this what you would expect? How would you experimentally get the Bode plot?"
    ]
   },
@@ -278,15 +312,32 @@
     "</strong>\n",
     "<br><br>\n",
     "\n",
-    "- Click the arrow button next to the check button to upload your code to your board. The text near the bottom of the IDE should say your code was uploaded successfully. During this process you should see the TX/RX leds blink rapidly on your board.\n",
-    "\n",
-    "- Connect the function generator to the Arduino by connect the ground wire from the function generator to the GND pin, and a V+ wire to the A0 pin.\n",
-    "\n",
-    "- Set your function generator to a sine wave of 2Vpp, 100Hz, and 1Vdc offset (Arduino can't view negative values).\n",
+    "- Click the arrow button next to the check button to upload your code to your board. The text near the bottom of the IDE should say your \n",
+    "code was uploaded successfully. During this process you should see the TX/RX leds blink rapidly on your board.\n",
     "\n",
     "Instead of using the oscilloscope to see the voltage waveform, you can now view the waveform by going to 'Tools>Serial Plotter' and view a real time plot\n",
     "of the function generator wave. You can only view up to a few hundred hertz before the signal aliases. This is okay since biomedical signals are usually at a\n",
-    "very low frequency.\n"
+    "very low frequency.\n",
+    "\n",
+    "### Design Problem\n",
+    "You're building a circuit for your biomedical startup. However, you keep finding that there's this huge interference when looking at the voltage outputs.\n",
+    "It's the power line interference at 60 Hz! Things to consider: the biomedical signal you want to acquire does not have any frequency components past 30 Hz.\n",
+    "\n",
+    "\n",
+    "Let's get rid of that pesky 60 Hz interference from the power lines. \n",
+    "\n",
+    "** Question 5.1:** Build a first order RC lowpass Filter that would take care of the problem. What will your RC value and cut-off frequency be? (Hint: don't forget that \n",
+    "annoying $2\\pi$ factor)? Is it okay that we're filtering every frequency past that cut-off frequency?\n",
+    "\n",
+    "** Question 5.2:** Let's test that the circuit actually filters out the 60 Hz. Let our desired signal be 5 Hz. Send that through the arduino and \n",
+    "view the waveform. Now send 60 Hz through the arduino and view it. What is the difference in magnitude of those frequencies, \n",
+    "assuming the input amplitude was the same?\n",
+    "\n",
+    "** Question 5.3: ** Find the cut-off frequency of your real circuit by tuning the frequency until it is roughly 0.7 times the amplitude of the input \n",
+    "(where did that number come from?) Compare that to the one you calculated. Explain any differences.\n",
+    "\n",
+    "** (Bonus) Question 5.4: ** Let's say that you want to suppress the 60 Hz interference even further. What are some options you can try? What are the trade-offs\n",
+    "/risks to those options?\n"
    ]
   }
  ],
