updated lab 1 and serial code

--- a/lab1/lab1.ipynb
+++ b/lab1/lab1.ipynb
@@ -10,7 +10,7 @@
     "## Objectives: ##\n",
     "<a id='objectives'></a>\n",
     "- Learn how to use an oscilloscope and function generator.<br>\n",
-    "- Learn to use breadboard to build and test simple circuits like resistive voltage divider, and RLC filter.<br>\n",
+    "- Learn to use breadboard to build and test simple circuits like resistive voltage divider, and RC filter.<br>\n",
     "- Learn how to use an Arduino and Python to acquire signals.<br>\n",
     "\n",
     "## Lab Report ##\n",
@@ -285,7 +285,7 @@
     "- Set your function generator to a sine wave of 2Vpp, 100Hz, and 1Vdc offset (Arduino can't view negative values).\n",
     "\n",
     "Instead of using the oscilloscope to see the voltage waveform, you can now view the waveform by going to 'Tools>Serial Plotter' and view a real time plot\n",
-    "of the function generator wave. You can only view up to a few hundred hertz before the signal aliases. This is okay since biomedical signals are usually at a\n",
+    "of the function generator wave. Make sure your baud rate matches the baud rate given in the code. You can only view up to a few hundred hertz before the signal aliases. This is okay since biomedical signals are usually at a\n",
     "very low frequency.\n"
    ]
   }
