--- a/lab4/lab4.ipynb
+++ b/lab4/lab4.ipynb
@@ -56,14 +56,12 @@
     "</center>\n",
     "<br></br>\n",
     "\n",
-    "<center>Figure 1. Schematic of an EKG amplifier and filter circuit.</center>\n",
     "\n",
     "<br></br>\n",
     "<center>\n",
     "<img src=\"http://puu.sh/tjiyg/04aeac4f2f.jpg\" align=\"center\" style=\"height:400px\" />\n",
     "</center>\n",
     "<br></br>\n",
-    "<center>Figure 2. Breadboard and protoboard implementations of above schematic</center>\n",
     "\n",
     "**Question 1:** \n",
     "Why are we using dual supply amplifiers? What might be the problem\n",
@@ -289,21 +287,12 @@
     "e) To claim your extra credit, demonstrate your heart monitor to a GSI and upload\n",
     "screenshots of your GUI and block diagram along with your lab questions.\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -317,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
