--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -82,13 +82,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "-  You will now calculate the nominal sensing resistance of your sensor. Note:\n",
     "Do not use the sensing/load resistance values from the datasheet in the next\n",
     "sections. Instead, calculate it empirically as follows.\n",
@@ -102,13 +95,6 @@
     "**Question 2:** What is the resistance of your FSR with an empty falcon tube placed on the sensor? With a 100g mass? Show your work. Sketch and label your circuit, and write down what weight you used. Pro-Tip: To help with consistency of your measurements, tape down the FSR and let the\n",
     "measurement ‘settle’ for 2-3 min to reach steady-state before recording.\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Answer:</b>"
    ]
   },
   {
@@ -139,21 +125,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "** Question 4:** Find an equation that describes Rs as a function of R1, Vbias, and Vout."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Answer:</b>"
    ]
   },
   {
@@ -171,13 +143,6 @@
     "**Question 5:** What is the steady state differential voltage between the two input\n",
     "terminals? Remember you may have to let the voltage differential ‘settle’ for many\n",
     "minutes before it reaches steady-state.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Answer:</b>"
    ]
   },
   {
@@ -202,22 +167,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Question 7:** Using the linear model from above, calculate the weight of the mysterious\n",
     "object."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Answer:</b>"
    ]
   },
   {
@@ -239,21 +190,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Question 9:** Find one biomedical application of force sensor, and briefly describe how it works."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Answer:</b>"
    ]
   },
   {
@@ -283,13 +220,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Question 11:** Experimentally make a weight vs. resistance curve by measuring a few\n",
     "objects of different weights. How does the resistance of the sensor change when\n",
     "pressure/weight is applied?"
@@ -299,38 +229,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "**Question 12:** How sensitive is your device as compared to a commercial FSR? What is\n",
     "the smallest detectable weight of the commercial device, and your device?"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<b>Answer:</b>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -344,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.4.5"
   }
  },
  "nbformat": 4,
