--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -30,7 +30,7 @@
     "Sections 3 - 5 (Questions 1 - 9) due at the start of the second week of Lab #3\n",
     "\n",
     "-  Week 2: DIY homemade pressure sensor\n",
-    "Section 6 (Questions 10 - 12) due the following week electronically to your lab GSI or in person during class on 2/23.\n",
+    "Section 6 (Questions 10 - 12) due the following week to your lab GSI at the beginning of Lab #4.\n",
     "\n",
     "## 2. Setup\n",
     "-  You and your partner should have the following items: Pressure sensor,\n",
@@ -237,7 +237,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
@@ -251,7 +251,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.4.5"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
