--- a/lab3/lab3.ipynb
+++ b/lab3/lab3.ipynb
@@ -204,7 +204,7 @@
     "You will use two copper plate electrodes and a piece of conductive foam.\n",
     "\n",
     "- First, cut two 2 x 2 cm electrodes from the copper plate, then solder wire leads\n",
-    "on to each piece.\n",
+    "on to each piece. Please ask for guidance if you have not previously soldered to copper.\n",
     "\n",
     "- Sandwich a 2 x 2 cm piece of conductive foam between the two electrodes,\n",
     "then glue in place with a hot glue gun.\n",
@@ -231,6 +231,13 @@
    "source": [
     "**Question 12:** How sensitive is your device as compared to a commercial FSR? What is\n",
     "the smallest detectable weight of the commercial device, and your device?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Please wash your hands after class as the solder we use contains lead!"
    ]
   }
  ],
